--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "pokt-code-controller",
   "version": "1.0.0",
-  "description": "Sistema de controle de requisições para editor de código",
+  "description": "Sistema de controle de usuários e tokens",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "init-db": "node scripts/init-db.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
+    "pg": "^8.11.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.1"
   },
-  "keywords": ["controle", "requisições", "editor", "código"],
-  "author": "Pokt Code Controller",
-  "license": "MIT"
+  "keywords": [
+    "pokt",
+    "controller",
+    "tokens",
+    "api"
+  ],
+  "author": "",
+  "license": "ISC"
 }
