--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "uuid": "^9.0.1"
